# substrate-node-manager

./: Cargo.toml  LICENSE  README.md  main.rs  rust-toolchain.toml  website.mp
backend/: Cargo.toml
backend/src/: main.rs  node.rs  os.rs
frontend/: main.py
html/: elements.rs  mod.rs
