[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10" }
tokio = { version = "1.26.0", features = ["full"] }
sysinfo = { version = "0.28.2" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }